# photon

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/photon_cli/: main.cpp
include/photon/: config.hpp  version.hpp
include/photon/accel/: bvh.hpp
include/photon/camera/: camera.hpp
include/photon/geometry/: hit_record.hpp  mesh.hpp  primitive.hpp  sphere.hpp  triangle.hpp
include/photon/image/: film.hpp  ppm_writer.hpp
include/photon/integrators/: path_tracer.hpp
include/photon/lights/: area_light.hpp  light.hpp  light_sampler.hpp
include/photon/materials/: dielectric.hpp  ggx.hpp  lambertian.hpp  library.hpp  material.hpp
include/photon/math/: aabb.hpp  mat4.hpp  math.hpp  onb.hpp  ray.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/photon/renderer/: tile_renderer.hpp
include/photon/samplers/: pcg32.hpp  sampler.hpp
include/photon/scene/: json_loader.hpp  scene.hpp
scenes/: cornell.json
src/: config.cpp
src/accel/: bvh.cpp
src/scene/: json_loader.cpp
tests/: CMakeLists.txt  bvh_test.cpp  camera_test.cpp  geometry_test.cpp  integrator_test.cpp  lights_test.cpp  materials_test.cpp  math_test.cpp  sampler_test.cpp  scene_test.cpp  smoke_test.cpp
